samples/_failures_safe/1761731145_604032_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bf304d12.c: In function ‘generate_sample_logs’:
./samples/SAFE/__tmp_bf304d12.c:133:9: error: missing terminating " character
  133 |         "Processing user request ID 12345
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_bf304d12.c:133:9: error: expected expression at end of input
./samples/SAFE/__tmp_bf304d12.c:133:9: error: expected declaration or statement at end of input
